<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="16dp"
              android:paddingRight="16dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beer_name"/>
            <EditText
                android:id="@+id/beer_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brew_date"/>
            <TextView
                android:id="@+id/brew_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:onClick="onClickDateInput"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#555555"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secondary_fermentation_date"/>
            <TextView
                android:id="@+id/secondary_fermentation_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:onClick="onClickDateInput"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#555555"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottling_or_kegging_date"/>
            <TextView
                android:id="@+id/bottling_or_kegging_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:onClick="onClickDateInput"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#555555"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beer_type"/>
            <Spinner
                android:id="@+id/beer_style_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#555555"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bittering Hops"
                    android:layout_weight="10"/>
                <Button
                    android:id="@+id/add_bittering_hops_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/bittering_hops_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Flavor Hops"
                    android:layout_weight="10"/>
                <Button
                    android:id="@+id/add_flavor_hops_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/flavor_hops_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Aroma Hops"
                    android:layout_weight="10"/>
                <Button
                    android:id="@+id/add_aroma_hops_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/aroma_hops_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Knock-Out Hops"
                    android:layout_weight="10"/>
                <Button
                    android:id="@+id/add_knockout_hops_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/knockout_hops_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dry Hops"
                    android:layout_weight="10"/>
                <Button
                    android:id="@+id/add_dry_hops_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/dry_hops_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pre-Boil Gravity"/>
            <EditText
                android:id="@+id/preboil_gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Original Gravity"/>
            <view
                class="com.example.scott.beerdiary2.FormActivity$CustomEditText"
                android:id="@+id/original_gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Final Gravity"/>
            <EditText
                android:id="@+id/final_gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ABV"/>
            <TextView
                android:id="@+id/abv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#555555"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"/>

            <EditText
                android:id="@+id/notes_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
